--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "json-loader": "^0.5.7",
     "typescript": "^3.4.5"
   },
   "dependencies": {
