--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "typescript": "^3.4.5"
   },
   "dependencies": {
-    "@types/node": "^12.0.2"
+    "@types/node": "^12.0.2",
+    "json-typescript-mapper": "^1.1.3",
+    "json2typescript": "^1.2.3"
   }
 }
